--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Aportes Municipales</title>
+</head>
+<body>
+
+    <div class="container">
+        <div class="grid">
+        <header>
+            <p>Salmon</p>
+        </header>
+            <section class="insert"><p>Broccoli</p></section>
+            <section class="consult"><p>Tamago</p></section>
+        <aside>
+            <p>Pork</p>
+        </aside>
+        <section class="toggle">
+            <p>Edamame</p>
+        </section>
+        <section class="generate">
+            <p>Tomato</p>
+        </section>
+        <footer>
+            <p>Tofu</p>
+        </footer>        
+        </div>
+      </div>
+      
+    <script src="js/app.js"></script>
+</body>
+</html>
