inicio de los redireccionamientos dinamicos

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <div class="container">
       <header class="card">Header</header>
       <main>
-        <section class="card insert">
+        <button id="insert-btn" class="insert card" type="button">
           <p class="insert-text">Ingresar Datos</p>
           <img class="insert-img" src="./assets/browser-insert-svgrepo-com.svg" alt="">
-        </section>
-        <section class="card consult">
+        </button>
+        <button id="consult-btn" class="consult card" type="button">
           <p class="consult-text">Consultar Datos</p>
           <img class="consult-img" src="./assets/search-window-svgrepo-com.svg" alt="">
-        </section>
-        <section class="switch-mode">
+        </button>
+        <section class="switch-mode" type="button">
           <input id="switch" type="checkbox" name="switch">
           <div class="app">
             <nav>
@@ -32,12 +32,12 @@
             <label class="toggle-label" id="dark" for="switch"></label>
           </div>
         </section>
-        <section class="card generate">
+        <button id="generate-btn" class="generate card" type="button">
           <p class="generate-text">Generar Archivos</p>
           <img class="generate-img" src="./assets/download-window-svgrepo-com.svg" alt="">
-        </section>
+        </btton>
       </main>
-      <aside class="card aside-content">
+      <aside class="aside-content card" type="button">
         <p class="aside-text">Datos Cargados</p>
         <img class="aside-img" src="/assets/derrick-with-load-svgrepo-com.svg" alt="">
       </aside>
