--- a/html/ingresar.html
+++ b/html/ingresar.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/insertar.css">
-    <title>Insertar datos</title>
+    <title>Ingresar datos</title>
 </head>
 <body>
     <div class="container">
         <header></header>
         <main>
             <form>
-                
+                hola
             </form>
         </main>
         <footer></footer>
