--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 </head>
 <body>
   <div id="container" class="container">
-      <header class="card">Header</header>
+      <header class="card loader">
+      </header>
       <main>
-        <button id="insert-btn" class="insert card" type="button">
+        <button id="insert-btn" class="insert card boton">
           <p class="insert-text">Ingresar Datos</p>
           <img class="insert-img" src="./assets/browser-insert-svgrepo-com.svg" alt="">
         </button>
-        <button id="consult-btn" class="consult card" type="button">
+        <button id="consult-btn" class="consult card boton">
           <p class="consult-text">Consultar Datos</p>
           <img class="consult-img" src="./assets/search-window-svgrepo-com.svg" alt="">
         </button>
-        <section class="switch-mode" type="button">
+        <button class="switch-mode">
           <input id="switch" type="checkbox" name="switch">
           <div class="app">
             <nav>
@@ -31,13 +32,13 @@
             <div class="circle"></div>
             <label class="toggle-label" id="dark" for="switch"></label>
           </div>
-        </section>
-        <button id="generate-btn" class="generate card" type="button">
+        </button>
+        <button id="generate-btn" class="generate card boton">
           <p class="generate-text">Generar Archivos</p>
           <img class="generate-img" src="./assets/download-window-svgrepo-com.svg" alt="">
         </btton>
       </main>
-      <aside class="aside-content card" type="button">
+      <aside class="aside-content card">
         <p class="aside-text">Datos Cargados</p>
         <img class="aside-img" src="/assets/derrick-with-load-svgrepo-com.svg" alt="">
       </aside>
