inicio diseño interfases redireccion

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Aportes Municipales</title>
 </head>
 <body>
+  <div id="loader-bar" class="progress-loader">
+    <div class="progress"></div>
+  </div>
   <div id="container" class="container">
       <header class="card loader">
       </header>
@@ -19,7 +22,7 @@
           <p class="consult-text">Consultar Datos</p>
           <img class="consult-img" src="./assets/search-window-svgrepo-com.svg" alt="">
         </button>
-        <button class="switch-mode">
+        <button class="switch-mode" type="button">
           <input id="switch" type="checkbox" name="switch">
           <div class="app">
             <nav>
