--- a/html/consultar.html
+++ b/html/consultar.html
@@ -14,19 +14,97 @@
         <main>
             <section class="section-1">
                 <form class="form-consult" id="form" autocomplete="off">
-                    <label for="cuil">Ingrese el cuil</label>
-                    <input type="number" name="cuil" placeholder="ingrese cuil" required>
-                    <label for="mes">Ingrese el mes</label>
-                    <select name="mes" id="mes"></select>
-                    <label for="year">Ingrese el año</label>
-                    <select name="year" id="year"></select>
-                    <button type="submit">Consultar</button>
+                    <div class="form-item">
+                        <label for="cuil">Ingrese el cuil</label>
+                        <input type="number" name="cuil" placeholder="ingrese cuil" required>
+                    </div>
+                    <div class="form-item">
+                        <label for="mes">Ingrese el mes</label>
+                        <select name="mes" id="mes"></select>
+                    </div>
+                    <div class="form-item">
+                        <label for="year">Ingrese el año</label>
+                        <select name="year" id="year"></select>
+                    </div>
+                    <button id="consult-btn" class="consult-btn" type="submit">Consultar</button>
                 </form>
             </section>
             <section class="section-2">
-                <table></table>
+                <table class="consult-table" id="consult-table">
+                    <thead>
+                      <tr>
+                        <th>#</th>
+                        <th>Columna 1</th>
+                        <th>Columna 2</th>
+                        <th>Columna 3</th>
+                        <th>Columna 4</th>
+                        <th>Columna 5</th>
+                        <th>Columna 6</th>
+                        <th>Columna 7</th>
+                        <th>Columna 8</th>
+                        <th>Columna 9</th>
+                        <th>Columna 10</th>
+                        <th>Columna 11</th>
+                        <th>Columna 12</th>
+                        <th>Columna 13</th>
+                        <th>Columna 14</th>
+                        <th>Columna 15</th>
+                        <th>Columna 16</th>
+                        <th>Columna 17</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <!-- Generación de 10 filas -->
+                      <tr>
+                        <td>1</td>
+                        <td>Dato 1</td>
+                        <td>Dato 2</td>
+                        <td>Dato 3</td>
+                        <td>Dato 4</td>
+                        <td>Dato 5</td>
+                        <td>Dato 6</td>
+                        <td>Dato 7</td>
+                        <td>Dato 8</td>
+                        <td>Dato 9</td>
+                        <td>Dato 10</td>
+                        <td>Dato 11</td>
+                        <td>Dato 12</td>
+                        <td>Dato 13</td>
+                        <td>Dato 14</td>
+                        <td>Dato 15</td>
+                        <td>Dato 16</td>
+                        <td>Dato 17</td>
+                      </tr>
+                      <!-- Copia este bloque para las otras 9 filas -->
+                      <!-- Ejemplo fila 2 -->
+                      <tr>
+                        <td>2</td>
+                        <td>Dato 1</td>
+                        <td>Dato 2</td>
+                        <td>Dato 3</td>
+                        <td>Dato 4</td>
+                        <td>Dato 5</td>
+                        <td>Dato 6</td>
+                        <td>Dato 7</td>
+                        <td>Dato 8</td>
+                        <td>Dato 9</td>
+                        <td>Dato 10</td>
+                        <td>Dato 11</td>
+                        <td>Dato 12</td>
+                        <td>Dato 13</td>
+                        <td>Dato 14</td>
+                        <td>Dato 15</td>
+                        <td>Dato 16</td>
+                        <td>Dato 17</td>
+                      </tr>
+                      <!-- Continúa con las filas restantes -->
+                    </tbody>
+                  </table>
             </section>
         </main>
+        <footer>
+            <p>footer</p>
+        </footer>
     </div>
     <script src="/js/consulta.js"></script>
 </body>
