--- a/html/ingresar.html
+++ b/html/ingresar.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/insertar.css">
+    <link rel="stylesheet" href="/css/colors.css">
     <title>Ingresar datos</title>
 </head>
 <body>
     <div class="container">
-        <header>
-            <div class="header-card">hola</div>
+        <header class="card">
+            <p>hola</p>
         </header>
-        <main>
-            <div class="form-contain">
-                
-            </div>
-            <form class="form" id="form">
+        <main class="card">
+            <form class="card form" id="form">
                 <div class="form-item">
                     <label for="cuil">Ingrese el Cuil del empleado</label>
                     <input class="form-input" type="number" name="cuil" id="cuil" placeholder="Cuil">
@@ -89,7 +87,11 @@
                     <button class="submit-btn" id="submit-btn" type="submit">Cargar datos</button>
             </form>
         </main>
-        <footer class="footer-card">chau</footer>
+        <aside class="card">
+            <p>aside</p>
+        </aside>
+        <footer class="footer-card card">chau</footer>
     </div>
+    <script src="/js/ingresar.js"></script>
 </body>
-</html>
+</html>`
