--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/colors.css">
     <title>Aportes Municipales</title>
 </head>
 <body>
@@ -45,7 +46,7 @@
         <p class="aside-text">Datos Cargados</p>
         <img class="aside-img" src="/assets/derrick-with-load-svgrepo-com.svg" alt="">
       </aside>
-      <footer class="card">Footer</footer>
+      <footer class="card"></footer>
     </div>
     <script src="js/app.js"></script>
 </body>
